# web_app_01

./: Cargo.toml  database_url.sh  package-lock.json
migrations/2018-07-09-171121_create_posts/: up.sql
migrations/2018-07-11-163913_posts/: up.sql
migrations/2018-07-20-062124_dojin-table/: up.sql
migrations/2018-07-21-145427_create_posts/: up.sql
src/: database.rs  image.rs  main.rs  model.rs  schema.rs
static/: Home.html  Home.html.tera  creater_1.html  creater_1.html.tera  creater_formprofile.html.tera  creater_profile.html.tera  creaters.html  creaters.html.tera  gallary.html.tera  hoge.html.tera  make_account.html  make_account.html.tera  news.html  news.html.tera  profile_form_template.html.tera  profile_text_template.html.tera  sign_up.html.tera
static/Umi-4.0.0/: .travis.yml  LICENSE  README.md  bower.json  package-lock.json  package.json
static/Umi-4.0.0/docs/: bootstrap.html
static/Umi-4.0.0/docs/assets/css/: example.css
static/Umi-4.0.0/docs/assets/scss/: example.scss
static/Umi-4.0.0/scss/honoka/: _honoka.scss
static/post_image/: Z1nZrCLjpS4A  plFuhTdFJ3PY
