[package]
name = "web_app_01"
version = "0.1.0"
authors = ["kazuha <mami.tomoe4@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = { version = "*", features = ["mysql","r2d2"]}
dotenv = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]