[package]
name = "web_app_01"
version = "0.1.0"
authors = ["kazuha <mami.tomoe4@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = { version = "*", features = ["mysql","r2d2"]}
dotenv = "*"
multipart = "*"
rocket_static_fs = "0.5.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]